before adding file
