# src/docs/swagger.yaml
@@ -1,4 +1,56 @@
 definitions:
+  dto.CityResponse:
+    properties:
+      country:
+        $ref: '#/definitions/dto.CountryResponse'
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  dto.CountryResponse:
+    properties:
+      cities:
+        items:
+          $ref: '#/definitions/dto.CityResponse'
+        type: array
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  dto.CreateCityRequest:
+    properties:
+      countryId:
+        type: integer
+      name:
+        maxLength: 20
+        minLength: 3
+        type: string
+    required:
+    - countryId
+    - name
+    type: object
+  dto.CreateUpdateCountryDTO:
+    properties:
+      name:
+        maxLength: 30
+        minLength: 3
+        type: string
+    required:
+    - name
+    type: object
+  dto.Filter:
+    properties:
+      filter_type:
+        type: string
+      from:
+        type: string
+      to:
+        type: string
+      type:
+        type: string
+    type: object
   dto.GetOtpRequest:
     properties:
       mobile_number:
@@ -19,6 +71,21 @@ definitions:
     required:
     - password
     - username
+    type: object
+  dto.PaginationInputWithFilter:
+    properties:
+      filter:
+        additionalProperties:
+          $ref: '#/definitions/dto.Filter'
+        type: object
+      page_number:
+        type: integer
+      page_size:
+        type: integer
+      sort:
+        items:
+          $ref: '#/definitions/dto.SortDTO'
+        type: array
     type: object
   dto.RegisterLoginByPhone:
     properties:
@@ -43,6 +110,20 @@ definitions:
       password:
         type: string
       username:
+        type: string
+    type: object
+  dto.SortDTO:
+    properties:
+      col_id:
+        type: string
+      sort:
+        type: string
+    type: object
+  dto.UpdateCityRequest:
+    properties:
+      name:
+        maxLength: 20
+        minLength: 3
         type: string
     type: object
   helper.Response:
@@ -135,6 +216,277 @@ paths:
       summary: Gs
       tags:
       - User
+  /v1/cities/delete/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a City
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: City response
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: Get a City
+      tags:
+      - Cities
+  /v1/cities/filter:
+    post:
+      consumes:
+      - application/json
+      description: Get Cities
+      parameters:
+      - description: Request
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.PaginationInputWithFilter'
+      responses:
+        "200":
+          description: City response
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: Get Cities
+      tags:
+      - Cities
+  /v1/city/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a City
+      parameters:
+      - description: Create a City
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateCityRequest'
+      responses:
+        "201":
+          description: City response
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.CityResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: Create a City
+      tags:
+      - Cities
+  /v1/city/get/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a City
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: response
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: Delete a City
+      tags:
+      - Cities
+  /v1/city/update/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update a City
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a City
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateCityRequest'
+      responses:
+        "200":
+          description: City response
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                result:
+                  $ref: '#/definitions/dto.CityResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: Update a City
+      tags:
+      - Cities
+  /v1/country/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a Country
+      parameters:
+      - description: Create a Country
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUpdateCountryDTO'
+      responses:
+        "201":
+          description: Country response
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: Create a Country
+      tags:
+      - Countries
+  /v1/country/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a Country
+      responses:
+        "204":
+          description: Country response
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: Delete a Country
+      tags:
+      - Countries
+  /v1/country/get-by-filter:
+    post:
+      consumes:
+      - application/json
+      description: GetCountryByFilter
+      parameters:
+      - description: GetCountryByFilter
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.PaginationInputWithFilter'
+      responses:
+        "200":
+          description: Country response
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: GetCountryByFilter
+      tags:
+      - Countries
+  /v1/country/get/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a Country
+      responses:
+        "200":
+          description: Country response
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: Get a Country
+      tags:
+      - Countries
+  /v1/country/update/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update a Country
+      parameters:
+      - description: Create a Country
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUpdateCountryDTO'
+      responses:
+        "200":
+          description: Country response
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - AuthBearer: []
+      summary: Update a Country
+      tags:
+      - Countries
   /v1/users/login-by-username:
     post:
       consumes:
